Update readme and main utilitary notebooks

--- a/gps_regression.ipynb
+++ b/gps_regression.ipynb
@@ -2966,7 +2966,9 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score"
@@ -3085,7 +3087,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
